--- a/base.css
+++ b/base.css
@@ -2,7 +2,7 @@ html, body {
     margin: 0;
 }
 body {
-    background-color: #f1f1f1;
+    background-color: white;
     display: flex;
     justify-content: center;
 }
@@ -51,3 +51,14 @@ fieldset {
     border-radius: 30px;
     border-color: grey;
 }
+
+table {
+    box-shadow: 4px 10px 5px 4px rgba(0,0,0,0.6);
+    border: solid 1px;
+}
+
+table tbody tr:hover td {
+    background-color: rgba(0,0,0,0.3);
+    cursor: pointer;
+}
+
